# OpenWhale

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: challenge_mcp.md
scripts/: delayed_autopilot.py  test_claude_api.py  test_openai_api.py
src/openwhale/: __init__.py  agent.py  logging_config.py  main.py  mcp_client.py
src/openwhale/agents/: __init__.py  base.py  claude_code_agent.py  deepagents_agent.py  factory.py  openai_agent.py  prompts.py  tooling.py
src/openwhale/util/: __init__.py  logging_config.py  mcp_client.py
src/openwhale/web/: __init__.py  app.py
src/openwhale/web/templates/: index.html
